tests/paczka1/fuzzy1/48678645.err
Error in line 1: 91IOmR3sty2 S459 15,7
Error in line 3: 91IOmR3sty2 S187 28,8
Error in line 12: yEmoHHDhe A666 49,6
Error in line 32: yEmoHHDhe S187 73,6
Error in line 35: yEmoHHDhe S187 22,45
Error in line 36: DArEtwErVc S187 63,2
